k8s/observability/umami/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-umami-https
  namespace: observability
spec:
  redirectScheme:
    scheme: https
    permanent: true
