k8s/observability/umami/service.yml
apiVersion: v1
kind: Service
metadata:
  name: umami
  namespace: observability
spec:
  selector:
    app: umami
  ports:
    - port: 3000
